[package]
name = "solaris-example"
version = "0.1.0"
authors = ["Tomasz Drwięga <tomusdrw@gmail.com>"]

[dependencies]
ethabi = { git = "https://github.com/tomusdrw/ethabi.git" }
ethabi-derive = { git = "https://github.com/tomusdrw/ethabi.git"}
ethabi-contract = { git = "https://github.com/tomusdrw/ethabi.git"}
eth-secp256k1 = { git = "https://github.com/paritytech/rust-secp256k1" }
solaris = { path = "../solaris", version = "0.1" }
ethereum-types = { git = "https://github.com/paritytech/primitives.git" }
rand = "0.3"
rustc-hex = "1.0"
tiny-keccak = "1.3"

[build-dependencies]
solc = { path = "../solc", version = "0.1" }

[[bin]]
name = "private_contract"
path = "src/private_contract.rs"
