[package]
name = "solaris"
version = "0.1.0"
authors = ["Tomasz Drwięga <tomusdrw@gmail.com>"]

[dependencies]
ethabi = { git = "https://github.com/openethereum/ethabi.git" }
ethcore = { git = "https://github.com/openethereum/openethereum.git", branch = "stable"}
common-types = { git = "https://github.com/openethereum/openethereum.git", branch = "stable" }
parity-bytes = "0.1"
ethereum-types = "0.3"
evm = { git = "https://github.com/openethereum/openethereum.git", branch = "stable" }
lazy_static = "0.2"
vm = { git = "https://github.com/openethereum/openethereum.git", branch = "stable" }
error-chain = "0.12.0"
