[package]
name = "solaris"
version = "0.1.0"
authors = ["Tomasz Drwięga <tomusdrw@gmail.com>"]

[dependencies]
ethabi = "12.0.0"
ethcore = { git = "https://github.com/openethereum/openethereum.git", branch = "master", features = ["test-helpers"]}
common-types = { git = "https://github.com/openethereum/openethereum.git", branch = "master" }
trace = { git = "https://github.com/openethereum/openethereum.git", branch = "master" }
spec = { git = "https://github.com/openethereum/openethereum.git", branch = "master" }
parity-bytes = "0.1"
ethereum-types = "0.9.0"
evm = { git = "https://github.com/openethereum/openethereum.git", branch = "master" }
lazy_static = "0.2"
vm = { git = "https://github.com/openethereum/openethereum.git", branch = "master" }
error-chain = "0.12.0"
