[package]
name = "solaris-tests"
version = "0.1.0"
authors = ["Maximilian Krüger <kruemaxi@gmail.com>"]

[dependencies]
ethabi = { git = "https://github.com/openethereum/ethabi.git" }
ethabi-derive = { git = "https://github.com/openethereum/ethabi.git" }
ethabi-contract = { git = "https://github.com/openethereum/ethabi.git" }
solaris = { path = "../solaris", version = "0.1" }
ethereum-types = "0.8.0"
rustc-hex = "1.0"

[build-dependencies]
solc = { path = "../solc", version = "0.1" }
