[package]
name = "solaris-tests"
version = "0.1.0"
authors = ["Maximilian Krüger <kruemaxi@gmail.com>"]

[dependencies]
ethabi = "12.0.0"
ethabi-derive = "12.0.0"
ethabi-contract = "11.0.0"
solaris = { path = "../solaris", version = "0.1" }
ethereum-types = "0.9.0"
rustc-hex = "1.0"

[build-dependencies]
solc = { path = "../solc", version = "0.1" }
